# yt-sub-rs

./: .gitignore  README.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/migrations/: 20241107095249_create_users.up.sql
api/src/: channel_data.rs  check_videos.rs  create_account.rs  delete_account.rs  lib.rs  lite_helpers.rs  registration.rs  routes.rs  store.rs  update_account.rs  user_settings_api.rs  users.rs
api/src/config/: middleware.rs  mod.rs  routes.rs  schedule.rs
api/src/controllers/: account.rs  channels.rs  mod.rs
api/src/tasks/: check_videos.rs  mod.rs  uptime_ping.rs
api/tests/: integration_test.rs
cli/: Cargo.toml
cli/src/: channel.rs  lib.rs  notifier.rs  test_helpers.rs  user_settings.rs  user_settings_cli.rs  video.rs
cli/src/fixtures/: yt_videos_data.xml
core/: Cargo.toml
core/src/: channel.rs  lib.rs  logger.rs  notifier.rs  test_helpers.rs  user_settings.rs  video.rs
workers/api/: Cargo.toml
workers/api/src/: lib.rs  registration.rs  store.rs
workers/channel_data/: Cargo.toml
workers/channel_data/src/: lib.rs
workers/cron/: Cargo.toml
workers/cron/src/: lib.rs
workers/workers-core/: Cargo.toml
workers/workers-core/src/: lib.rs  users.rs
workers/yt-sub-api/: Cargo.toml
workers/yt-sub-api/src/: lib.rs  registration.rs
workers/yt-sub-api/tests/: integration_test.rs
