[package]
name = "yt-sub-workers-core"
version = "0.1.6"
edition = "2021"
categories = ["command-line-utilities"]
description = "yt-sub workers core library"
license = "MIT"

[profile.release]
lto = true

[dependencies]
yt-sub-core = "0.1.5"
# yt-sub-core = { path = "../../core" }
worker = { version = "0.4.2" }
worker-macros = { version = "0.4.2" }
eyre = "0.6.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
