[package]
license = "MIT"
name = "yt-sub-api"
version = "0.1.0"
edition = "2021"
authors = ["pawurb <contact@pawelurbanek.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2" }
worker-macros = { version = "0.4.2" }
console_error_panic_hook = { version = "0.1.1" }
serde_json = "1.0.128"
# wasm-rs-dbg = "0.1.2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
